<resources>
    <string name="app_name">POS Teknokrat</string>
    <string name="data_usaha">Data Usaha</string>
    <string name="nama_usaha">Nama Usaha</string>
    <string name="kategori_usaha">Kategori Usaha</string>
    <string name="alamat_usaha">Alamat Usaha</string>
    <string name="data_pemilik_usaha">Data Pemilik Usaha</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_handphone">No. Handphone (Opsional)</string>
    <string name="email">Email</string>
    <string name="no_pin_6_angka">No. PIN (6 Angka)</string>
    <string name="daftar">Daftar</string>
    <string name="lengkapi_data_dibawah_ini">Lengkapi data dibawah ini</string>
    <string name="pos_teknokrat">POS Teknokrat</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_pin">Lupa PIN ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rp_20000">Rp 0</string>
    <string name="hai_username">Selamat Datang</string>
    <string name="cari">Cari</string>
    <string name="stok_tersedia_8">Stok Tersedia: 8</string>
    <string name="checkout">Checkout</string>
    <string name="outlet">Outlet</string>
    <string name="pegawai">Pegawai</string>
    <string name="pusat">Pusat</string>
    <string name="produk">Produk</string>
    <string name="kategori">Kategori</string>
    <string name="tambah_gambar">Tambah Gambar</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="merk_brand">Merk/Brand</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="pegawai_outlet">Pegawai Outlet</string>
    <string name="tambah_outlet">Tambah Outlet</string>
    <string name="nama_pegawai">Nama Pegawai</string>
    <string name="pekerjaan_jabatan">Pekerjaan/Jabatan</string>
    <string name="tambah_pegawai">Tambah Pegawai</string>
    <string name="produk_yang_dibeli">Produk yang dibeli</string>
    <string name="nama_pelanggan">Nama Pelanggan (Opsional)</string>
    <string name="jumlah_beli">Jumlah Beli</string>
    <string name="catatan">Catatan</string>
    <string name="bayar">Bayar</string>
    <string name="jabatan">Jabatan</string>
    <string name="belum_punya_akun_daftar">Belum Punya Akun? <u>Daftar</u></string>
    <string name="laporan">Laporan</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="kategori_produk">Kategori Produk</string>
    <string name="simpan">Simpan</string>
    <string name="hapus">Hapus</string>
    <string name="sudah_punya_akun_login">Sudah Punya Akun? <u>Login</u></string>
    <string name="kelola_produk">Kelola Produk</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="mode_gelap">Mode Gelap</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="stok_opsional">Stok (Opsional)</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="hidupkan_koneksi">Hidupkan koneksi internet dan muat ulang data</string>
    <string name="hapus_produk">Hapus Produk</string>
    <string name="cari_berdasarkan_produk">Cari Berdasarkan Produk</string>
    <string name="cari_berdasarkan_kategori">Cari Berdasarkan Kategori</string>
    <string name="laporan_penjualan">Total Penjualan</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="laporan_keuangan">Total Pemasukan</string>
    <string name="cari_outlet">Cari Outlet</string>
    <string name="cari_pegawai">Cari Pegawai</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="tunai">Tunai</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="desc_tunai">Bayar langsung tanpa transfer ke tempat kasir</string>
    <string name="transfer">Transfer</string>
    <string name="desc_transfer">Bayar transfer tanpa antri dengan metode pembayaran yang lebih lengkap</string>
    <string name="kasbon">Kasbon</string>
    <string name="desc_kasbon">Opsi terakhir jika saldo kosong dan lupa bawa uang</string>
    <string name="bekerja_di_outlet">Bekerja di outlet</string>
    <string name="masukkan_jumlah_uang">Masukkan Jumlah Uang</string>
    <string name="cetak_struk">Cetak Struk</string>
    <string name="transaksi_sukses">Transaksi Sukses</string>
    <string name="tambahkan_ke_keranjang">Simpan ke Keranjang</string>
    <string name="remove">X</string>
    <string name="pilih_semua">Pilih Semua</string>
    <string name="cari_pelanggan">Cari Pelanggan</string>
    <string name="data_pegawai">Data Pegawai</string>
    <string name="data_kosong">Data Kosong</string>
    <string name="start_uikit_sdk">start uikit sdk</string>
    <string name="credit_card_payment">credit card payment</string>
    <string name="mandiri_va">mandiri va</string>
    <string name="bni_va">bni va</string>
    <string name="atm_bersama">atm bersama</string>
    <string name="jumlah_produk_yang_dijual">Jumlah produk yang dijual</string>
    <string name="harian">Harian</string>
    <string name="pekanan">Pekanan</string>
    <string name="bulanan">Bulanan</string>
    <string name="rata_rata_penjualan">Rata-rata penjualan:</string>
    <string name="saya_tidak_ingin_mengisi_data">Saya tidak ingin mengisi data</string>
    <string name="update">Update</string>
    <string name="pin_baru">PIN baru</string>
    <string name="konfirmasi_pin_baru">Konfirmasi PIN baru</string>
    <string name="cetak_laporan">Cetak Laporan</string>
    <string name="_26_3_2023">26/3/2023</string>
    <string name="kopi_kenangan">Kopi Kenangan</string>
    <string name="privacy_policy">Saya menyetujui segala kebijakan privasi pada sistem ini. Saya percaya semua data yang dimasukkan terjamin keamananya</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="e_payment">E-Payment</string>
</resources>