<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".product.cart.CartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bg_screen"
        android:paddingTop="24dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/saya_tidak_ingin_mengisi_data"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/text_color"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0.9"
            app:cardCornerRadius="16dp">

            <EditText
                android:id="@+id/nama_pelanggan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_shape_stroke"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/nama_pelanggan"
                android:padding="12dp"
                android:textColor="@color/text_color" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0.9"
            app:cardCornerRadius="16dp">

            <EditText
                android:id="@+id/nohp_pelanggan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_shape_stroke"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/no_handphone"
                android:padding="12dp"
                android:textColor="@color/text_color" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produk_yang_dibeli"
            android:textSize="18sp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <CheckBox
            android:id="@+id/cb_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_semua"
            android:fontFamily="@font/poppins_medium"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/cart_item"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0.9"
            app:cardCornerRadius="16dp">

            <EditText
                android:id="@+id/txcatatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_shape_stroke"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/catatan"
                android:padding="12dp"
                android:textColor="@color/text_color" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/totalCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_20000"
            android:textColor="@color/text_color"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="22sp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_bayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/primary"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tx_total_bayar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/bayar"
                android:textSize="19sp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_semibold"
                android:padding="12dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>