<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_screen"
    android:padding="16dp"
    tools:context=".verification.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pos_teknokrat"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_color"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="42sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:alpha="0.9"
        app:cardElevation="8dp"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/txemail_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_shape_stroke"
            android:textColor="@color/text_color"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/poppins_medium"
            android:padding="12dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:alpha="0.9"
        app:cardElevation="8dp"
        android:background="@drawable/bg_shape_stroke"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp">

        <EditText
            android:id="@+id/txpin_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_pin_6_angka"
            android:background="@drawable/bg_shape_stroke"
            android:inputType="numberPassword"
            android:focusableInTouchMode="true"
            android:textColor="@color/text_color"
            android:fontFamily="@font/poppins_medium"
            android:padding="12dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txlupapin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_pin"
        android:layout_gravity="end"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="17sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/poppins_medium"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/primary"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/masuk"
            android:textSize="19sp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:padding="12dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun_daftar"
        android:layout_gravity="center_horizontal"
        android:layout_margin="24dp"
        android:textSize="17sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/poppins_medium"/>
</LinearLayout>