<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".report.PenjualanActivity">

    <RadioGroup
        android:id="@+id/rg_penjualan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbharian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harian"
            android:textColor="@color/text_color"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="17sp"/>

        <RadioButton
            android:id="@+id/rbpekanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pekanan"
            android:textColor="@color/text_color"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="17sp"/>

        <RadioButton
            android:id="@+id/rbbulanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulanan"
            android:textColor="@color/text_color"
            android:fontFamily="@font/poppins_medium"
            android:textSize="17sp"/>

    </RadioGroup>

    <ProgressBar
        android:id="@+id/pb_penjualan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart_penjualan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rg_penjualan"
        android:padding="8dp"/>

</RelativeLayout>